# betanet-lint

./: .gitignore  Cargo.toml  README.md  deny.toml  fixture_good  fixture_good.c  report.json  sbom.json  self.json  test-sbom.intoto.jsonl  test-sbom.json  test.json  tests.md  usage_examples.md
.github/workflows/: ci.yml  compliance.yml
src/: binary.rs  checks.rs  crypto.rs  lib.rs  main.rs  protocol.rs  sbom.rs  slsa.rs
tests/: checks.rs  cli.rs  integration.rs
