[package]
name = "betanet-lint"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
prettytable = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"
goblin = "0.8"
regex = "1.10"
anyhow = "1.0"
uuid = "1.0"
twoway = "0.2"
byteorder = "1.5"

# Enhanced SBOM dependencies
thiserror = "1.0"
strum = { version = "0.26", features = ["derive"] }
cyclonedx-bom = "0.6"
spdx-rs = "0.5"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"

# Advanced SBOM capabilities
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
ar = "0.9"
petgraph = "0.6"
semver = "1.0"
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
