[package]
name = "betanet-lint"
version = "0.1.0"
edition = "2021"
authors = ["Betanet Team <team@betanet.org>"]
description = "Betanet ยง11 compliance linter with enhanced SBOM generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darkraider01/betanet-lint"

[[bin]]
name = "betanet-lint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
goblin = "0.7"
sha2 = "0.10"
md5 = "0.7"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prettytable-rs = "0.10"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
strum = { version = "0.25", features = ["derive"] }

# SBOM dependencies
cyclonedx-bom = "0.5"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# New dependencies for enhanced analysis
memmap2 = "0.9"
byteorder = "1.5"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
